--- a/adv_resolver_math/requirements.txt
+++ b/adv_resolver_math/requirements.txt
@@ -2,6 +2,7 @@
 langchain>=0.1.0
 langchain_core>=0.1.0
 langchain-community>=0.0.10
+langchain-ollama>=0.1.1
 ollama>=0.1.5
 sympy>=1.12.0
 pandas>=2.1.0
