--- a/adv_resolver_math/requirements.txt
+++ b/adv_resolver_math/requirements.txt
@@ -6,7 +6,16 @@ langchain-ollama>=0.1.1
 ollama>=0.1.5
 sympy>=1.12.0
 pandas>=2.1.0
+openpyxl>=3.1.2
+pyarrow>=15.0.0
+
 matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
+ydata-profiling>=4.7.0
+memory_profiler>=0.61.0
+jupyter>=1.0.0
+nbconvert>=7.16.0
 datasets>=2.15.0
 
 # Rich terminal interface
